last standifer commit for wednesday background

--- a/public/patriot_cuts.css
+++ b/public/patriot_cuts.css
@@ -1,7 +1,9 @@
 /*--------------------------------------------------------
 Header/nav
 ---------------------------------------------------------*/
-
+body {
+	background-color: #444B51;
+}
 nav {
 	text-align: right;
 	color: white;
