--- a/public/patriot_cuts.css
+++ b/public/patriot_cuts.css
@@ -8,7 +8,7 @@ nav {
 	text-align: right;
 	color: white;
 	}
-.header-text {
+/*.header-text {
 	font-size: 20px;
 	margin: 10px;
 	position: relative;
@@ -19,7 +19,7 @@ nav {
 	}
 	.location {
 		color: blue;
-	}
+	}*/
 	/*.btn-link {
 		background-color: red;
 	}*/
