--- a/public/patriot_cuts.css
+++ b/public/patriot_cuts.css
@@ -111,6 +111,9 @@ nav {
 	      width: 100%;
 	      margin: auto;
 	  }
+	.carousel-caption {
+	text-shadow: 2px 2px blue; 
+}
 /*--------------------------------*/
           /*Services Well*/
 /*--------------------------------*/
@@ -256,8 +259,7 @@ service panel backgrounds
 
 #quote-carousel .carousel-control {
   background: none;
-   color: #28C8FD;
-  font-size: 2.3em;
+  font-size: 1.5em;
   text-shadow: none;
   margin-top: 30px;
 }
