--- a/public/patriot_cuts.css
+++ b/public/patriot_cuts.css
@@ -262,6 +262,7 @@ service panel backgrounds
   font-size: 1.5em;
   text-shadow: none;
   margin-top: 30px;
+  opacity: .5;
 }
 
 #quote-carousel .carousel-indicators {
@@ -304,6 +305,12 @@ service panel backgrounds
   font-family: 'Fontawesome';
   float: left;
   margin-right: 10px;
+}
+.item blockquote p:after {
+  content: "\f10e";
+  font-family: 'Fontawesome';
+  float: right;
+  margin-left: 10px;
 }
 
 /*--------------------------------*/
