--- a/public/patriot_cuts.css
+++ b/public/patriot_cuts.css
@@ -239,7 +239,7 @@ service panel backgrounds
 
 #quote-carousel {
   padding: 0 10px 30px 10px;
-  margin-top: 60px;
+  /*margin-top: 60px;*/
 }
 
 #quote-carousel .carousel-control {
@@ -351,7 +351,20 @@ service panel backgrounds
     	color: #ccccff;
     	text-shadow: 2px 2px black;
     }
-/*--------------------------------------*/
 
+    .creditCards {
+		color: yellow;
+		margin-bottom: 200px;
+		font-size: 250%;
+		text-align: left;
+	}
 
+/*--------------------------------
+Footer
+---------------------------------*/
+	.footer {
+		width: 100%;
+		text-align: center;
+		color: white
+	}
 
