--- a/public/patriot_cuts.css
+++ b/public/patriot_cuts.css
@@ -6,44 +6,29 @@ Header/nav
 }*/
 
 body {
-  background-color: #444B51;
+  /*background-color: #444B51;*/
+  /*background-color: #333333;*/
+  background-color: #262626;
   /*background-image: url(http://capstone.dev/BarberShopFrontBW.jpg);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  background-position: center;*/
+  background-position: center;
+  background-opacity: 25%;*/
+}
+.header-logo {
+	position: relative;
+	top: 2px;
+	left: 2px;
 }
 nav {
   text-align: right;
   color: white;
 }
 
-/*.header-text {
-	font-size: 20px;
-	margin: 10px;
-	position: relative;
-	top: 20px;
-	}
-	.services {
-		color: white;
-	}
-	.location {
-		color: blue;
-	}*/
-
-
-/*.btn-link {
-		background-color: red;
-	}*/
-
-
-/* unvisited link */
-
-<<<<<<< HEAD
 /*------------------------------------------------------
                   Hours Modal
 ------------------------------------------------------*/
-=======
 .btn-link:link {
   color: red;
 }
@@ -64,7 +49,6 @@ nav {
 Hours Modal
 ----------------------------------*/
 
->>>>>>> 9e2e0b8a69584e41f51addf69a74f30880e4fd5d
 .modal-title {
   color: red;
   text-shadow: 2px 2px purple;
@@ -101,15 +85,15 @@ Contact Us Modal
 }
 #contact-name {
   position: relative;
-  left: 0px
+  left: 21px
 }
 #contact-email {
   position: relative;
-  left: 0px;
+  left: 23px;
 }
 #contact-subject {
   position: relative;
-  left: 0px;
+  left: 15px;
 }
 #contact-cc {
   position: relative;
@@ -128,6 +112,10 @@ Contact Us Modal
 }
 .contact-input {
   color: black;
+}
+
+.contact-send, .contact-cancel {
+	color: black;
 }
 
 /*--------------------------------
@@ -374,7 +362,6 @@ img {
 
 .creditCards {
 	color: yellow;
-	margin-bottom: 200px;
 	font-size: 250%;
 	text-align: left
 	;
