--- a/public/patriot_cuts.css
+++ b/public/patriot_cuts.css
@@ -340,19 +340,19 @@ img {
 }*/
 .shop-address {
   font-size: 3rem;
-  font-weight: bold;
+  /*font-weight: bold;*/
   color: #28C8FD;
   text-shadow: 2px 2px black;
 }
 .phone-number {
   font-size: 3rem;
-  font-weight: bold;
+  /*font-weight: bold;*/
   color: #28C8FD;
   text-shadow: 2px 2px black;
 }
 .loc-hours {
   font-size: 2rem;
-  font-weight: 500;
+  /*font-weight: 500;*/
   color: #28C8FD;
   text-shadow: 2px 2px black;
 }
