--- a/public/patriot_cuts.css
+++ b/public/patriot_cuts.css
@@ -15,6 +15,8 @@ body {
 nav {
   text-align: right;
   color: white;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 /*------------------------------------------------------
